Implemented ListGames tests